RESOLVED FIXED86304
Fix backing bitmap creation under wxMSW.
https://bugs.webkit.org/show_bug.cgi?id=86304
Summary Fix backing bitmap creation under wxMSW.
Robin Dunn
Reported 2012-05-12 14:17:26 PDT
Explicitly use a bimap with a depth of 32 bits.
Attachments
really upload the patch file... (1.71 KB, patch)
2012-05-12 16:10 PDT, Robin Dunn
kevino: review+
kevino: commit-queue-
Robin Dunn
Comment 1 2012-05-12 16:10:03 PDT
Created attachment 141587 [details] really upload the patch file...
Kevin Ollivier
Comment 2 2012-05-12 18:43:37 PDT
Landed in r116862, thanks!
Note You need to log in before you can comment on or make changes to this bug.