[wx] Fix backing bitmap creation under wxMSW. https://bugs.webkit.org/show_bug.cgi?id=86304

Reviewed by Kevin Ollivier.


Canonical link: https://commits.webkit.org/103893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116862 268f45cc-cd09-0410-ab3c-d52691b4dbfc